# trading-agent

./: .gitignore  .railwayignore  README.md
agent/: Dockerfile  Procfile  README.md  entrypoint.sh  pyproject.toml  railway.json
agent/pytest-cache-files-fv2lm_7x/v/cache/: nodeids
agent/src/binacci/: __init__.py  api.py  backtest.py  basis.py  brain.py  chain.py  cli.py  config.py  data.py  divergence.py  execution.py  fastind.py  fees.py  funding.py  indicators.py  levels.py  live.py  macro.py  metalearn.py  models.py  orchestrator.py  persistence.py  regime.py  riskmatch.py  routing.py  sentinel.py  simulations.py  skill.py  strategies.py  timebase.py  venues.py
agent/tests/: test_basis.py  test_execution.py  test_fastind.py  test_fees.py  test_funding.py  test_leverage_backtest.py  test_live_safety.py  test_metalearn.py  test_regime_alloc.py  test_sentinel.py  test_strategies.py  test_strategy.py
dashboard/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: charts.tsx  globals.css  layout.tsx  page.tsx  shell.tsx  useAgent.ts
docs/: ARCHITECTURE.md  DORAHACKS.md  GITHUB.md  GOLIVE.md  HACKATHON.md  ROADMAP.md  ROADMAP_SWARM.md  SETUP.md  SKILLS_ROADMAP.md
skills/: README.md  build_skills.py
skills/binacci-basis-carry/: SKILL.md
skills/binacci-funding-carry/: SKILL.md
skills/binacci-liquidity-sweep-strategy/: SKILL.md
skills/binacci-macro-regime-classifier/: SKILL.md
skills/binacci-mean-reversion-strategy/: SKILL.md
skills/binacci-momentum-breakout-strategy/: SKILL.md
skills/binacci-risk-matcher/: SKILL.md
(+15 files in other folders)
